--- a/src/components/Plans/Plans.css
+++ b/src/components/Plans/Plans.css
@@ -72,3 +72,15 @@
   color: orange;
 }
 
+.plans-blur-1{
+  width: 32rem;
+  height: 23rem;
+  top: 6rem;
+  left: 0;
+}
+.plans-blur-2{
+  width: 32rem;
+  height: 23rem;
+  top: 10rem;
+  right: 0;
+}
