--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,19 @@
 ::-webkit-scrollbar{
   display: none;
 }
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+  -webkit-text-fill-color: var(--darkGrey) !important;
+  -webkit-box-shadow: 0 0 0px 1000px #808080 inset;
+  transition: background-color 5000s ease-in-out 0s;
+}
 
 .stroke-text{
   color: transparent;
