--- a/src/components/Join/Join.css
+++ b/src/components/Join/Join.css
@@ -46,6 +46,10 @@
   color: var(--darkGrey);
 }
 
+.email-container>input::selection {
+  background-color: green;
+}
+
 ::placeholder{
   color: var(--lightgray);
 }
